# acadia

./: .ccls  .gdbinit  .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASES.md  init-dbg.sh
lib/glacier/: CMakeLists.txt
lib/glacier/buffer/: byte_buffer.h  cap_buffer.h
lib/glacier/container/: array.h  array_iter.h  array_view.h  binary_tree.h  hash_map.h  intrusive_list.h  linked_list.h  optional.h  pair.h  vector.h
lib/glacier/memory/: move.h  ref_counted.h  ref_ptr.h  reference.h  shared_ptr.h  unique_ptr.h
lib/glacier/status/: error.cpp  error.h  error_or.h  status.h
lib/glacier/string/: str_format.cpp  str_format.h  str_split.cpp  str_split.h  string.cpp  string.h  string_builder.cpp  string_builder.h  string_view.cpp  string_view.h
lib/glacier/test/: CMakeLists.txt
lib/glacier/util/: hash.cpp  hash.h
lib/libc/: CMakeLists.txt
lib/libc/include/: stddef.h  stdio.h  stdlib.h  string.h
lib/libc/src/: malloc.cpp  stdio.cpp  string.cpp
lib/libcxx/: CMakeLists.txt
lib/libcxx/include/: cstddef  cstdint  new
lib/libcxx/src/: new.cpp
lib/mammoth/: CMakeLists.txt
lib/mammoth/file/: file.cpp  file.h
lib/mammoth/input/: keyboard.cpp  keyboard.h
lib/mammoth/ipc/: channel.cpp  channel.h  endpoint_client.cpp  endpoint_client.h  endpoint_server.cpp  endpoint_server.h  port_client.cpp  port_client.h  port_server.cpp  port_server.h  response_context.h
lib/mammoth/proc/: process.cpp  process.h  thread.cpp
lib/mammoth/src/: channel.cpp  debug.cpp  endpoint_client.cpp  endpoint_server.cpp  init.cpp  memory_region.cpp  mutex.cpp  new.cpp  port.cpp  port_client.cpp  port_server.cpp  process.cpp  semaphore.cpp  thread.cpp
lib/mammoth/sync/: mutex.cpp  mutex.h  semaphore.cpp  semaphore.h
lib/mammoth/util/: debug.cpp  debug.h  init.cpp  init.h  memory_region.cpp  memory_region.h  new.cpp
lib/yunq/: CMakeLists.txt  message_view.cpp  message_view.h  serialize.cpp  serialize.h  yunq.h
lib/yunq/test/: CMakeLists.txt  yunq_test.cpp
rust/: Cargo.toml  x86_64-acadia-os.json
rust/.cargo/: config.toml
rust/lib/denali/: Cargo.toml
rust/lib/mammoth/: Cargo.toml  build.rs
rust/lib/victoriafalls/: Cargo.toml  build.rs
rust/lib/voyageurs/: Cargo.toml  build.rs
rust/lib/yellowstone/: Cargo.toml  build.rs
rust/lib/yunq/: Cargo.toml
rust/lib/yunq-derive/: Cargo.toml
rust/lib/yunq-test/: Cargo.toml  build.rs
rust/sys/denali/: Cargo.toml  build.rs
rust/sys/teton/: Cargo.toml
rust/sys/yellowstone/: Cargo.toml
rust/usr/testbed/: Cargo.toml
sys/: CMakeLists.txt  README.md  TODO.md  test.cpp  test2.cpp
sys/denali/: CMakeLists.txt  denali.cpp  denali_server.cpp  denali_server.h
sys/denali/ahci/: ahci.h  ahci_controller.cpp  ahci_controller.h  ahci_device.cpp  ahci_device.h  ahci_driver.cpp  ahci_driver.h  ahci_port.cpp  ahci_port.h  command.cpp  command.h
sys/denali/client/: denali_client.cpp
sys/teton/: CMakeLists.txt  keyboard_listener.cpp  keyboard_listener.h  terminal.cpp  terminal.h  teton.cpp
sys/teton/framebuffer/: console.cpp  console.h  framebuffer.h  (+3 more)
sys/victoriafalls/: CMakeLists.txt  victoriafalls.cpp  victoriafalls_server.cpp  victoriafalls_server.h
sys/voyageurs/: CMakeLists.txt  voyageurs.cpp  voyageurs_server.cpp  voyageurs_server.h
sys/yellowstone/: CMakeLists.txt  yellowstone.cpp  yellowstone_server.cpp  yellowstone_server.h
usr/testbed/: CMakeLists.txt  test.cpp
yunq/: CMakeLists.txt  client.cpp.jinja  client.h.jinja  codegen_message.py  example.yunq  example.yunq.client.cpp  example.yunq.client.h  example.yunq.cpp  example.yunq.h  example.yunq.server.cpp  example.yunq.server.h  message.cpp.jinja  message.h.jinja  parser.py  requirements.txt  server.cpp.jinja  server.h.jinja  yunq.py
yunq/example/: example.yunq  example.yunq.client.cpp  example.yunq.client.h  example.yunq.cpp  example.yunq.h  example.yunq.server.cpp  example.yunq.server.h
yunq/rust/: Cargo.toml
zion/: CMakeLists.txt  README.md  TODO.md  linker.ld  zion.cpp
zion/boot/: acpi.cpp  acpi.h  boot_info.cpp  boot_info.h  limine.cfg  limine.h
zion/capability/: capability.cpp  capability.h  capability_table.cpp  capability_table.h
zion/common/: cpu.cpp  cpu.h  gdt.cpp  gdt.h  load_gdt.s  msr.cpp  msr.h  port.h  stack_unwind.cpp  stack_unwind.h
zion/debug/: debug.cpp  debug.h
zion/include/: cap_types.h  zcall.h  zcall_macros.h  zerrors.h  zglobal.h  zinit.h  ztypes.h
zion/interrupt/: apic.cpp  apic.h  apic_timer.cpp  apic_timer.h  driver_manager.cpp  driver_manager.h  interrupt.cpp  interrupt.h  interrupt_enter.s  timer.cpp  timer.h
zion/lib/: linked_list.h  memory_mapping_tree.cpp  memory_mapping_tree.h  message_queue.cpp  message_queue.h  mutex.cpp  mutex.h  pair.h  ref_counted.h  ref_ptr.h  shared_ptr.h
zion/loader/: elf_loader.cpp  elf_loader.h  init_loader.cpp  init_loader.h
zion/memory/: constants.h  kernel_heap.cpp  kernel_heap.h  kernel_stack_manager.cpp  kernel_stack_manager.h  kernel_vmm.cpp  kernel_vmm.h  paging_util.cpp  paging_util.h  physical_memory.cpp  physical_memory.h  slab_allocator.cpp  slab_allocator.h  user_stack_manager.cpp  user_stack_manager.h  virtual_memory.cpp  virtual_memory.h
zion/object/: address_space.cpp  address_space.h  channel.cpp  channel.h  endpoint.cpp  endpoint.h  ipc_object.cpp  ipc_object.h  kernel_object.h  memory_object.cpp  memory_object.h  mutex.cpp  mutex.h  port.cpp  port.h  process.cpp  process.h  reply_port.cpp  reply_port.h  semaphore.cpp  semaphore.h  thread.cpp  thread.h
zion/scheduler/: cleanup.cpp  cleanup.h  context_switch.s  jump_user_space.s  process.cpp  process.h  process_manager.cpp  process_manager.h  scheduler.cpp  scheduler.h  thread.cpp  thread.h
zion/syscall/: address_space.cpp  address_space.h  capability.cpp  capability.h  channel.cpp  channel.h  debug.cpp  debug.h  endpoint.cpp  endpoint.h  ipc.cpp  ipc.h  memory_object.cpp  memory_object.h  port.cpp  port.h  process.cpp  process.h  reply_port.cpp  reply_port.h  synchronization.cpp  synchronization.h  syscall.cpp  syscall.h  syscall_enter.s  thread.cpp  thread.h
zion/usr/: crt0.s  zcall.cpp  zcall_internal.h
(+146 files in other folders)
