[package]
name = "yunqc"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
prettyplease = "0.2.20"
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = "2.0.72"

clap = { version = "4.5.7", features = ["derive"], optional = true}

[features]
build-binary = ["clap"]

[[bin]]
name = "yunqc"
required-features = ["build-binary"]
