[package]
name = "yellowstone"
version = "0.1.0"
edition = "2021"

[dependencies]
mammoth = { path = "../../lib/mammoth" }
denali = { path = "../../sys/denali", default-features = false}
victoriafalls = { path = "../../lib/victoriafalls" }
voyageurs = { path = "../../lib/voyageurs" }
yellowstone-yunq = { path = "../../lib/yellowstone" }
yunq = { path = "../../lib/yunq" }
